Box shadow / tittle background / fix gaps

--- a/style.css
+++ b/style.css
@@ -2,9 +2,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
+
 :root {
     color-scheme: dark;
 }
+
+
 
 /* Font Awesome - Social media*/
 .fa {
@@ -38,23 +42,27 @@
 
 /* ---------------- */
 
-
 body {
     background-color: black;
+    margin: 0;
 }
 
+
 h1 {
+    background-color: #202020;
     text-align: center;
     color: white;
     font-family: 'Dancing Script', cursive;
     font-size: 60px;
-    margin-top: 20px;
+    margin: 0;
+    padding: 30px;
 }
-
 
 
 .p_container {
     background-color: #202020;
+    margin-bottom: 0;
+    display: inline-block;
 }
 
 
@@ -67,9 +75,14 @@ h1 {
 }
 
 
-img {
-    width: 70%;
+.img_Container {
+    background: url(./assets/images/james.jpg) no-repeat;
+    width: 1280px;
+    height: 720px;
+    /* offset-x | offset-y | blur-radius | spread-radius | color */
+    box-shadow: inset -300px 0px 50px 0px black ;
 }
+
 
 footer {
     background-color: #202020;
